Fix: Phantom codeblock scrollbar

--- a/src/components/primary/chat/_codeblock.scss
+++ b/src/components/primary/chat/_codeblock.scss
@@ -14,10 +14,10 @@
 // Language
 .message-group .comment .markup pre code::before{
     content: attr(class);
-    width: 100%;
+    width: calc(100% + 280px);
     display: block;
     margin: -7px 0 .5em -280px;
-    padding: 2px 287px 2px 0;
+    padding: 2px 6px 2px 0;
     background-color: #5E5E5E;
     color: #FFF;
     font-family: $font;
